--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "template-dev-gulp",
+  "name": "calculator",
   "version": "1.0.0",
-  "description": "",
+  "description": "simple calculator",
   "main": "index.js",
   "scripts": {
     "dev": "gulp dev",
     "build": "gulp build"
   },
   "repository": {
-    "type": "git",
-    "url": ""
+    "type": "git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
   "homepage": "",
   "devDependencies": {
     "@babel/core": "^7.9.0",
